# tarea-4-ejercicio-cnn-tarea-4-10

./: Plantilla_Tareas.ipynb  README.md  melanie_solution.py  patricio_villanueva.py  pyproject.toml  solution1.py
