[project]
name = "tarea4"
version = "0.1.0"
description = "Tarea 4 de Modelos no Lineales"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.19.0",
]
